Fix debug panel only showing static fields